# shapemerge2d

./: .gitignore  .project  .sconsign.dblite  Doxyfile  LICENSING  Makefile  Makefile.am  Makefile.in  README  SConstruct  config.h.in  configure  configure.ac  install.txt  libtool  pyshapemerge2d.i  pyshapemerge2d.py  shapemerge2d.py  t.py  valgrind.supp
docs/: todo.txt
examples/: example1.cpp
shapemerge2d/: Makefile.am  Makefile.in  boolean_op.cpp  boolean_op.h  first_octant.cpp  first_octant.h  line.cpp  line.h  line2.cpp  line2.h  line_old.cpp  line_old.h  polygon.cpp  polygon.h  rational_old.cpp  rational_old.h  shape.cpp  shape.h  shapemerge2d.cpp  shapemerge2d.h  shapesoup.h  solver.h  vector.cpp  vector.h  vertex.cpp  vertex.h
test/: oldtest_rational.py  test_boolean_op.py  test_line.py  test_line2.py  test_line_old.py  test_polygon.py  test_shape.py  test_shape_examples.py  test_vector.py  visualize.py
